1.0.3 (09/23/13)
  *Fixed appearance of portfolio node pagination when logged in.
  *Updated appearance of Drupal tabs.

1.0.2 (09/18/13)
  *Added theme setting to toggle black and white image effect.
  *Removed restriction on sticky header for logged in users.
  *Fixed a bug causing the Drupal contact form to not function properly. 
  *Fixed search box permissions in demo install. 
  *Removed margin from image post slider.
  *Fixed bug where comment date was displaying the node date.
  *Added support for detail box hover color.
  *Updated documentation.
  *Added theme PSD files to download content.

1.0.1 (09/09/13)
  *Fixed ul/li default styles.
  *Fixed misconfigured blocks in demo content.
  *Updated documentation.

1.0 (09/05/13)
  *Initial release.