@@ -1,9 +1,5 @@
 jQuery(document).ready(function ($) {
-
-  $(".comment-form .form-actions input[type='submit']").addClass("button default");
-  $(".contact-form .form-actions input[type='submit']").addClass("button default");
       
-  $("#google_map").fitMaps( {w: '100%', h:'370px'} ); 
-  
+  $("#google_map").fitMaps( {w: '100%', h:'370px'} );   
 
 });
